# Converting_voice_to_text

./: README.md  main.py  pyproject.toml
